# password-manager

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
forms/: addentrydialog.ui  entrycard.ui  gui.ui  logindialog.ui
include/: Database.h  Encryption.h  PasswordEntry.h  PasswordManager.h  addentrydialog.h  entrycard.h  gui.h  logindialog.h
src/: Database.cpp  Encryption.cpp  PasswordManager.cpp  addentrydialog.cpp  entrycard.cpp  gui.cpp  logindialog.cpp  main.cpp
